--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -48,8 +48,7 @@
         android:layout_below="@+id/btnLikesCount"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:minHeight="200dp"
-        android:textSize="20sp"
+        android:textSize="10sp"
         android:maxLines="3"
         android:ellipsize="end"
         android:textColor="@color/blue"
@@ -59,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvComments"
-        android:layout_below="@+id/btnLikesCount"
+        android:layout_below="@+id/tvCaption"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="42dp"
