--- a/app/src/main/res/layout/activity_photos.xml
+++ b/app/src/main/res/layout/activity_photos.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     tools:context=".PhotosActivity">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,4 +21,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
          />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
