added padding to layout and image
added padding to layout and image

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,5 @@
 
     <item name="blue" type="color">#407399</item>
     <color name="transparent">#00000000</color>
+    <color name="grey">#808080</color>
 </resources>
