--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,12 +3,29 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/rlComments">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/ivUserPicForComment"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:border_width="0dp"
+        app:border_color="#FF000000"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvComment"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toRightOf="@id/ivUserPicForComment" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvRelativePostingTimeComment"
+        android:layout_below="@+id/tvComment"
+        />
 </RelativeLayout>
