--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,77 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/rlPhotos">
+    android:id="@+id/rlPhotos"
+    android:padding="@dimen/padding">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/ivUserPic"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"/>-->
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ivUserPic"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:border_width="0dp"
+        app:border_color="#FF000000"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvRelativePostingTime"
-        android:layout_alignRight="@+id/ivUserPic"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivPhoto"
-        android:layout_below="@+id/ivUserPic"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:minHeight="50dp"/>
-
-    <Button
-        android:id="@+id/btnLikesCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/likes_blue"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/ivPhoto"
-        android:textAllCaps="false"
-        android:textColor="@color/blue"
-        android:background="@color/transparent"
+
+      />
+
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tvUsername"
+    android:layout_toRightOf="@+id/ivUserPic"
+    android:layout_alignParentTop="true"
+    android:textColor="@color/blue"
+    android:gravity="center_vertical"
+    android:layout_above="@+id/ivPhoto"
+    />
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tvRelativePostingTime"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentTop="true"
+    android:layout_above="@+id/ivPhoto"
+    android:gravity="center_vertical"/>
+
+
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/ivPhoto"
+    android:layout_below="@+id/ivUserPic"
+    android:adjustViewBounds="true"
+    android:scaleType="fitXY"
+    android:minHeight="50dp"
+    android:paddingTop="@dimen/padding"
+    />
+
+<Button
+    android:id="@+id/btnLikesCount"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:drawableLeft="@drawable/likes_blue"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_below="@+id/ivPhoto"
+    android:textAllCaps="false"
+    android:textColor="@color/blue"
+    android:background="@color/transparent"
+ />
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tvCaption"
+    android:layout_below="@+id/btnLikesCount"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:textColor="@color/blue"
+    android:includeFontPadding="false"
      />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCaption"
-        android:layout_below="@+id/btnLikesCount"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="15sp"
-        android:maxLines="3"
-        android:ellipsize="end"
-        android:textColor="@color/blue"
-         />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvComments"
-        android:layout_below="@+id/tvCaption"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="42dp"
-        android:textSize="15sp"
-       />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnMoreComments"
-        android:layout_below="@+id/tvComments"
+        android:layout_below="@+id/tvCaption"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textAllCaps="false"
-        android:background="@color/transparent"/>
+        android:textColor="@color/grey"
+        android:minHeight="0dp"
+        android:paddingTop="0dp"
+        android:layout_marginTop="-15dip"
+        android:background="@color/transparent"
+        android:textSize="15sp"/>
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tvComments"
+    android:layout_below="@+id/btnMoreComments"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:textSize="15sp"
+   />
+
+
 </RelativeLayout>
