--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/rlComments">
+    android:id="@+id/rlComments"
+    android:padding="@dimen/padding">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -26,6 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvRelativePostingTimeComment"
-        android:layout_below="@+id/tvComment"
+        android:layout_alignLeft="@+id/tvComment"
+        android:layout_alignBottom="@+id/tvComment"
+
         />
 </RelativeLayout>
